--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -8,26 +8,31 @@
 	"main": "worker/index.ts",
 	"compatibility_date": "2025-05-20",
 	"assets": {
-		"not_found_handling": "single-page-application",
-		"run_worker_first": true
+		"not_found_handling": "single-page-application"
 	},
 	"observability": {
 		"enabled": true
 	},
-
+	"workers_dev": false,
+	"preview_urls": false,
+	"routes": [
+		{
+			"pattern": "viewer.kokoya.de",
+			"custom_domain": true
+		}
+	],
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
 	 */
 	// "placement": { "mode": "smart" },
-
 	/**
 	 * Bindings
 	 * Bindings allow your Worker to interact with resources on the Cloudflare Developer Platform, including
 	 * databases, object storage, AI inference, real-time communication and more.
 	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
 	 */
-  	"d1_databases": [
+	"d1_databases": [
 		{
 			"binding": "DATABASE",
 			"database_name": "external-image-viewer",
@@ -50,13 +55,11 @@
 	 * Note: Use secrets to store sensitive data.
 	 * https://developers.cloudflare.com/workers/configuration/secrets/
 	 */
-
 	/**
 	 * Static Assets
 	 * https://developers.cloudflare.com/workers/static-assets/binding/
 	 */
 	// "assets": { "directory": "./public/", "binding": "ASSETS" },
-
 	/**
 	 * Service Bindings (communicate between multiple Workers)
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
