--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -21,6 +21,10 @@
 			"custom_domain": true
 		}
 	],
+	"placement": {
+		"hint": "apac",
+		"mode": "smart"
+	},
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -37,7 +41,7 @@
 			"binding": "DATABASE",
 			"database_name": "external-image-viewer",
 			"database_id": "6d1eb137-e738-4171-99b2-c384edcca70a",
-			"migrations_dir": "./drizzle"
+			"migrations_dir": "./drizzle",
 		}
 	],
 	"r2_buckets": [
