--- a/package.json
+++ b/package.json
@@ -12,39 +12,39 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
-		"@hono/zod-validator": "^0.5.0",
-		"@prisma/adapter-d1": "^6.8.2",
+		"@aws-sdk/client-s3": "^3.821.0",
 		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/themes": "^3.2.1",
-		"@tanstack/react-query": "^5.77.0",
-		"drizzle-orm": "^0.43.1",
+		"@tanstack/react-query": "^5.79.0",
 		"hono": "^4.7.10",
+		"minio": "^8.0.5",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-hot-toast": "^2.5.2",
 		"react-router": "^7.6.1",
 		"react-swipeable": "^7.0.2",
-		"ress": "^5.0.2",
-		"wasm-image-optimization": "^1.2.30",
-		"zod": "^3.25.28"
+		"ress": "^5.0.2"
 	},
 	"devDependencies": {
-		"@cloudflare/vite-plugin": "^1.2.4",
+		"@cloudflare/vite-plugin": "^1.3.1",
 		"@eslint/js": "^9.27.0",
-		"@types/node": "^22.15.21",
-		"@types/react": "^19.1.5",
+		"@hono/zod-validator": "^0.5.0",
+		"@types/node": "^22.15.28",
+		"@types/react": "^19.1.6",
 		"@types/react-dom": "^19.1.5",
 		"@vitejs/plugin-react": "^4.5.0",
 		"babel-plugin-react-compiler": "19.1.0-rc.2",
 		"drizzle-kit": "^0.31.1",
+		"drizzle-orm": "^0.43.1",
 		"eslint": "^9.27.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"globals": "^16.2.0",
-		"prisma": "^6.8.2",
 		"typescript": "~5.8.3",
-		"typescript-eslint": "^8.32.1",
+		"typescript-eslint": "^8.33.0",
 		"vite": "^6.3.5",
-		"wrangler": "^4.16.1"
+		"wasm-image-optimization": "^1.2.30",
+		"wrangler": "^4.18.0",
+		"zod": "^3.25.42"
 	}
 }
