--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-    "target": "ES2020",
+    "target": "ES2024",
     "useDefineForClassFields": true,
     "lib": [
-      "ES2020",
+      "ES2024",
       "DOM",
       "DOM.Iterable"
     ],
@@ -27,5 +27,8 @@
   },
   "include": [
     "src"
+  ],
+  "exclude": [
+    "worker/index.ts"
   ]
 }
