--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"react-hot-toast": "^2.5.2",
 		"react-router": "^7.6.1",
 		"react-swipeable": "^7.0.2",
-		"ress": "^5.0.2"
+		"ress": "^5.0.2",
+		"valtio": "^2.1.5"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^1.3.1",
@@ -40,6 +41,7 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"globals": "^16.2.0",
+		"rollup-plugin-license": "^3.6.0",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.33.0",
 		"vite": "^6.3.5",
